--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'styles-app-loading.scss';
+@import 'styles-variables.scss';
+@import '~bootstrap/scss/bootstrap-reboot';
+@import '~bootstrap/scss/bootstrap-grid';
+@import 'styles-reset.scss';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
